# level-5-coding-autonomy

./: .gitignore  README.md  pyproject.toml
agentic/: Dockerfile  agent_w_mcp.py  agentic.ipynb  bash_tool_fastmcp.py  fail.py  server.json
non-agentic/: non-agentic.ipynb
